<?xml version="1.0"?>

<package format="2">

  <name>tuw_station_manager</name>

  <version>0.0.0</version>

  <description>Node to Receive Stations via Service and Publish them to a Topic</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltengger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tuw_multi_robot_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tuw_multi_robot_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tuw_multi_robot_msgs</exec_depend>


</package>